Added userSelf route
