# api/swagger/swagger.yaml
@@ -37,6 +37,7 @@
         read:userInvitation: "reads userInvitation"
         read:groups: "reads groups"
         read:notifications: "reads notifications"
+        read:userSelf: "reads userSelf"
   parameters: 
     f: 
       type: "string"
@@ -633,6 +634,29 @@
             description: "Success"
             schema: 
               $ref: "#/definitions/notifications"
+          default: 
+            description: "Error"
+            schema: 
+              $ref: "#/definitions/ErrorResponse"
+    /sharing/rest/community/self: 
+      x-swagger-router-controller: "userSelf"
+      get: 
+        description: "This resource allows discovery of the current authenticated user identified by the token"
+        operationId: "getUserSelf"
+        security: 
+          - 
+            agol_oauth_implicit: 
+              - "read:userSelf"
+        parameters: 
+          - 
+            $ref: "#/parameters/f"
+          - 
+            $ref: "#/parameters/token"
+        responses: 
+          200: 
+            description: "Success"
+            schema: 
+              $ref: "#/definitions/user"
           default: 
             description: "Error"
             schema: 
